agrega idioma, facultad y horario semanal para tutorias